[package]
name = "microstr"
version = "0.1.0"
edition = "2021"
description = "Stack-allocated string with fixed capacity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/stackstring"
documentation = "https://docs.rs/stackstring"
readme = "README.md"
keywords = ["string", "stack", "no-std", "utf8"]
categories = ["no-std", "data-structures"]

[features]
default = ["std"]
std = []
serde = ["std", "dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.3"
serde_json = "1.0"