[package]
name = "microstr"
version = "0.4.0"
edition = "2021"
description = "Stack-allocated string with fixed capacity"
license = "MIT"
repository = "https://github.com/DanilaMint/microstr"
documentation = "https://docs.rs/microstr"
readme = "readme.md"
keywords = ["string", "stack", "no-std", "utf8"]
categories = ["no-std", "data-structures"]
rust-version = "1.76"

[features]
default = ["std"]
std = []